--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
     - 5.3
     - 5.4
     - 5.5
+    - 5.6
     - hhvm
 
 matrix:
@@ -13,3 +14,16 @@ matrix:
 before_script:
     - composer self-update
     - composer install --dev
+
+before_install:
+    - sudo apt-get update -qq
+    - sudo apt-get install -y -qq postfix
+
+before_script:
+    - sudo service postfix stop
+    - smtp-sink -d "%d.%H.%M.%S" localhost:2500 1000 &
+    - mkdir -p build/logs
+
+after_script:
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
