--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
     "bin": ["bin/spammer"],
     "require": {
         "php": ">=5.3.3",
-        "symfony/console": "2.5.*",
+        "symfony/console": "2.6.*",
         "fzaninotto/faker": "1.5.*@dev",
-        "swiftmailer/swiftmailer": "5.2.*"
+        "swiftmailer/swiftmailer": ">=5.2.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.2"
+        "phpunit/phpunit": "~4.4",
+        "codeclimate/php-test-reporter": "dev-master"
     }
 }
