--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,100 +1,16 @@
-before_commands:
-    - "composer install --prefer-source"
-
+filter:
+    paths: ["src/*"]
+    excluded_paths: ["vendor/*", "tests/*"]
 tools:
-    # Code Coverage
-    external_code_coverage:
-        enabled: true
-        timeout: 300
-        filter:
-            excluded_paths:
-                - 'tests/*'
-                - 'vendor/*'
-
-
-    php_code_coverage:
-        enabled:              false
-        test_command:         phpunit
-        filter:
-            excluded_paths:
-                - 'tests/*'
-                - 'vendor/*'
-
-
-    # Code Sniffer
-    php_code_sniffer:
-        enabled:              true
-        command:              phpcs
-        config:
-            standard:         PSR2
-        filter:
-            excluded_paths:
-                - 'tests/*'
-                - 'vendor/*'
-
-
-    # Copy/Paste Detector
+    php_code_sniffer: true
+    php_sim: true
+    php_changetracking: true
+    php_cs_fixer: true
+    php_mess_detector: true
+    php_pdepend: true
+    php_analyzer: true
     php_cpd:
-        enabled:              true
-        command:              phpcpd
-        excluded_dirs:
-            - tests
-            - vendor
-
-
-    # PHP CS Fixer (http://http://cs.sensiolabs.org/).
-    php_cs_fixer:
-        enabled:              true
-        command:              php-cs-fixer
-        config:
-            level:            psr2
-        filter:
-            excluded_paths:
-                - 'tests/*'
-                - 'vendor/*'
-
-
-    # Analyzes the size and structure of a PHP project.
-    php_loc:
-        enabled:              true
-        command:              phploc
-        excluded_dirs:
-            - tests
-            - vendor
-
-
-    # PHP Mess Detector (http://phpmd.org).
-    php_mess_detector:
-        enabled:              true
-        command:              phpmd
-        config:
-            rulesets:
-                - codesize
-                - unusedcode
-                - naming
-                - design
-        filter:
-            excluded_paths:
-                - 'tests/*'
-                - 'vendor/*'
-
-
-    # Analyzes the size and structure of a PHP project.
-    php_pdepend:
-        enabled:              true
-        command:              pdepend
-        excluded_dirs:
-            - tests
-            - vendor
-
-    # Runs Scrutinizer's PHP Analyzer Tool
-    php_analyzer:
-        enabled:              true
-        filter:
-            excluded_paths:
-
-                - 'tests/*'
-                - 'vendor/*'
-
-    # Security Advisory Checker
+      enabled: true
+      excluded_dirs: ["vendor", "tests"]
+    external_code_coverage: true
     sensiolabs_security_checker: true
