--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
         "php": ">=5.3.3",
         "symfony/console": "2.6.*",
         "fzaninotto/faker": "1.5.*@dev",
-        "swiftmailer/swiftmailer": ">=5.2.1"
+        "swiftmailer/swiftmailer": "5.4.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.4",
+        "phpunit/phpunit": "~4.6",
         "codeclimate/php-test-reporter": "dev-master"
     }
 }
