--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,27 @@
 language: php
 
 php:
-    - 5.3
-    - 5.4
-    - 5.5
-    - 5.6
-    - hhvm
+  - 5.3
+  - 5.4
+  - 5.5
+  - 5.6
+  - 7.0
+  - hhvm
 
 before_install:
-    - sudo apt-get update -qq
-    - export DEBIAN_FRONTEND=noninteractive
-    - sudo apt-get install -y -qq postfix
+  - composer self-update
+  - sudo apt-get update -qq
+  - export DEBIAN_FRONTEND=noninteractive
+  - sudo apt-get install -y -qq postfix
 
 before_script:
-    - composer self-update
-    - composer install --dev
-    - sudo service postfix stop
-    - smtp-sink -d "build/email/%d.%H.%M.%S" 127.0.0.1:2500 1000 &
-    - mkdir -p build/logs
+  - composer install
+  - sudo service postfix stop
+  - smtp-sink -d "build/email/%d.%H.%M.%S" 127.0.0.1:2500 1000 &
+  - mkdir -p build/logs
 
 after_script:
-    - wget https://scrutinizer-ci.com/ocular.phar
-    - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
-    - "CODECLIMATE_REPO_TOKEN=a757d1980821cc8b324859a9755a1c8524c1e00409a8fa00a67acd41a649cf25 ./vendor/bin/test-reporter --stdout > codeclimate.json"
-    - "curl -X POST -d @codeclimate.json -H 'Content-Type: application/json' -H 'User-Agent: Code Climate (PHP Test Reporter v0.1.1)' https://codeclimate.com/test_reports"
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
+  - "CODECLIMATE_REPO_TOKEN=a757d1980821cc8b324859a9755a1c8524c1e00409a8fa00a67acd41a649cf25 ./vendor/bin/test-reporter --stdout > codeclimate.json"
+  - "curl -X POST -d @codeclimate.json -H 'Content-Type: application/json' -H 'User-Agent: Code Climate (PHP Test Reporter v0.1.1)' https://codeclimate.com/test_reports"
