--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: false
+
 language: php
 
 php:
@@ -8,13 +10,13 @@ php:
   - 7.0
   - hhvm
 
-before_install:
-  - composer self-update
-  - sudo apt-get update -qq
-  - export DEBIAN_FRONTEND=noninteractive
-  - sudo apt-get install -y -qq postfix
+addons:
+  apt:
+    packages:
+    - postfix
 
 before_script:
+  - composer self-update
   - composer install
   - sudo service postfix stop
   - smtp-sink -d "build/email/%d.%H.%M.%S" 127.0.0.1:2500 1000 &
