--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "swiftmailer/swiftmailer": "5.4.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.6",
-        "codeclimate/php-test-reporter": "dev-master"
+        "phpunit/phpunit": "~4.8",
+        "codeclimate/php-test-reporter": "dev-master",
+        "codacy/coverage": "dev-master"
     }
 }
