--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ addons:
     packages:
     - postfix
 
+before_install:
+  - pip install --user codecov
+
 before_script:
   - composer self-update
   - composer install
@@ -24,5 +27,6 @@ before_script:
 after_success:
   - wget https://scrutinizer-ci.com/ocular.phar
   - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
+  - codecov
   - "CODECLIMATE_REPO_TOKEN=a757d1980821cc8b324859a9755a1c8524c1e00409a8fa00a67acd41a649cf25 ./vendor/bin/test-reporter --stdout > codeclimate.json"
   - "curl -X POST -d @codeclimate.json -H 'Content-Type: application/json' -H 'User-Agent: Code Climate (PHP Test Reporter v0.1.1)' https://codeclimate.com/test_reports"
