--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,13 @@
     },
     "bin": ["bin/spammer"],
     "require": {
-        "php": ">=5.3.3",
-        "symfony/console": "2.6.*",
-        "fzaninotto/faker": "1.5.*@dev",
-        "swiftmailer/swiftmailer": "5.4.*"
+        "php": ">=5.5.9",
+        "symfony/console": "3.0.*",
+        "fzaninotto/faker": "^1.5",
+        "swiftmailer/swiftmailer": "^5.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
-        "codeclimate/php-test-reporter": "dev-master",
-        "codacy/coverage": "dev-master"
+        "codeclimate/php-test-reporter": "dev-master"
     }
 }
