--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
     },
     "bin": ["bin/spammer"],
     "require": {
-        "php": ">=5.5.9",
-        "symfony/console": "3.0.*",
+        "php": "^5.6|^7.0",
+        "symfony/console": "3.2.*",
         "fzaninotto/faker": "^1.5",
-        "swiftmailer/swiftmailer": "^5.4"
+        "swiftmailer/swiftmailer": "^5.4.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.8",
+        "phpunit/phpunit": "5.*|6.*",
         "codeclimate/php-test-reporter": "dev-master"
     }
 }
