--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,29 @@ sudo: false
 
 language: php
 
+cache:
+  directories:
+    - $HOME/.composer/cache
+
 php:
-  - 5.5
-  - 5.6
+  - 7.1
   - 7.0
+  - 5.6
   - hhvm
+
+matrix:
+  fast_finish: true
+  include:
+    # test against the latest HHVM version by using trusty
+    - php: hhvm
+      sudo: true
+      dist: trusty
+      group: edge # Use edge image until the next travis CI image update
+  allow_failures:
+    - php: hhvm
+
+git:
+  depth: 5
 
 addons:
   apt:
