--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,12 +20,14 @@
             <exclude>
                 <directory>./tests</directory>
                 <directory>./vendor</directory>
+                <directory>./bin</directory>
             </exclude>
         </whitelist>
     </filter>
 
     <logging>
         <log type="coverage-text" target="php://stdout" showUncoveredFiles="true"/>
+        <log type="coverage-html" target="build/logs/coverage" lowUpperBound="35" highLowerBound="70" showUncoveredFiles="true" />
         <log type="coverage-clover" target="build/logs/clover.xml"/>
     </logging>
 </phpunit>
