--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,14 @@
     },
     "bin": ["bin/spammer"],
     "require": {
-        "php": "^5.6|^7.0",
-        "symfony/console": "3.2.*",
-        "fzaninotto/faker": "^1.5",
-        "swiftmailer/swiftmailer": "^5.4.6"
+        "php": "^7.0|^7.1|^7.2",
+        "symfony/console": "^4.1",
+        "fzaninotto/faker": "^1.8",
+        "swiftmailer/swiftmailer": "^6.1",
+        "vaibhavpandeyvpz/phemail": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.*|6.*",
+        "phpunit/phpunit": "^5.7.26|^6.0|^7.0",
         "codeclimate/php-test-reporter": "dev-master"
     }
 }
